--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <!-- CSS file -->
-  <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles.css" media="all">
   
 </head>
 <body>
@@ -36,8 +36,8 @@
  
 
 <script type="text/javascript">
-  var spec2 = "js/scatter_plot.vg.json";
-  var spec3 = "js/map.vg.json";
+  var spec2 = "scatter_plot.vg.json";
+  var spec3 = "map.vg.json";
   
   vegaEmbed('#scatter_plot', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
