--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Homework Week 10</title>
+  <title>A Bilingual Society</title>
   <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
   <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
@@ -33,18 +33,52 @@
     </div>
     <!-- end pure grid group -->
   </div>
+  
+      <!-- pure grid group -->
+    <div class="pure-g">
+        <div class="pure-u-1-1">
+          <div id="histogram" class="vis-container"></div>
+        </div>
+    </div>
+    <!-- end pure grid group -->
+  </div>
+  
+   <!-- pure grid group -->
+    <div class="pure-g">
+        <div class="pure-u-1-2">
+          <div id="basque_bar" class="vis-container"></div>
+        </div>
+        <div class="pure-u-1-2">
+          <div id="english_bar" class="vis-container"></div>
+        </div>
+    </div>
+    <!-- end pure grid group -->
  
 
 <script type="text/javascript">
   var spec2 = "scatter_plot.vg.json";
   var spec3 = "map.vg.json";
+  var spec4 = "histogram.vg.json";
+  var spec5 = "basque_bar_chart.vg.json";
+  var spec6 = "english_bar_chart.vg.json";
   
   vegaEmbed('#scatter_plot', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
-
   
   vegaEmbed('#chloropleth_map', spec3).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+  
+   vegaEmbed('#histogram', spec4).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+  
+   vegaEmbed('#basque_bar', spec5).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+  
+   vegaEmbed('#english_bar', spec6).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
