--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
   <div class="page">
     <!-- pure grid group -->
     <div class="pure-g">
+      <div class="pure-u-1-1">
+        <h1>A Bilingual Society</h1>
+        <p>In 2017 a study was conducted on linguistic ability in the Basque valley, an autonomous zone of Spain in which 
+          people speak both Spanish and Basque. What can their results tell us about the impacts of having a bilingual population? </p>
+      </div>
+    </div>
+    <!-- end pure grid group -->
+
+    <!-- pure grid group -->
+    <div class="pure-g">
         <div class="pure-u-1-1">
           <div id="scatter_plot" class="vis-container"></div>
         </div>
@@ -32,7 +42,6 @@
         </div>
     </div>
     <!-- end pure grid group -->
-  </div>
   
       <!-- pure grid group -->
     <div class="pure-g">
@@ -41,18 +50,18 @@
         </div>
     </div>
     <!-- end pure grid group -->
-  </div>
   
    <!-- pure grid group -->
     <div class="pure-g">
-        <div class="pure-u-1-2">
-          <div id="basque_bar" class="vis-container"></div>
-        </div>
+      <div class="pure-u-1-2">
+        <div id="basque_bar" class="vis-container"></div>
+      </div>
         <div class="pure-u-1-2">
           <div id="english_bar" class="vis-container"></div>
         </div>
     </div>
     <!-- end pure grid group -->
+  </div>
  
 
 <script type="text/javascript">
@@ -85,3 +94,4 @@
 
 </body>
 </html>
+
